Fixed card text overflow bug

--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,7 @@ img.icon{
     grid-auto-flow: row;
     grid-auto-rows: 180px;
     gap:20px;
+    grid-template-columns: 280px;
 }
 
 .announcement{
